# exuberance

./: .env.example  .gitignore  .rules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  ENGINE.md  LICENSE  PROBES.md  README.md  RELEASES.md  REVIEW.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  install.sh  rust-toolchain.toml
.cargo/: config.toml
.claude/agents/: devils-advocate.md  research-analyst.md  risk-manager.md  vol-quant.md
.github/: actionlint.yaml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: audit.yml  ci-privileged-hosted.yml  ci-privileged.yml  ci.yml  fuzz-smoke.yml  fuzz.yml  release.yml
crates/abi/: Cargo.toml
crates/abi/src/: abi.rs  detector.rs  lib.rs  verdict.rs
crates/abi/tests/: verdict_wire.rs
crates/agent-client/: Cargo.toml
crates/agent-client/src/: lib.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: lib.rs
crates/agentd-client/: Cargo.toml
crates/agentd-protocol/: Cargo.toml
crates/agentd-protocol/src/: lib.rs
crates/channel/: Cargo.toml
crates/channel/src/: fuzz_tests.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: audit.rs  config.rs  detector.rs  doctor.rs  lib.rs  logging.rs  main.rs  metrics.rs  policy.rs  registry.rs  serve.rs  session.rs  trace.rs  verify.rs  watch.rs
crates/cli/src/agentd/: main.rs  metrics.rs  session.rs
crates/cli/tests/: agentd_e2e.rs  cli_daemon_golden.rs  serve_e2e.rs  trace_e2e.rs
crates/core/: Cargo.toml
crates/core/src/: ai.rs  broker.rs  error.rs  lib.rs  market_data.rs  provider.rs  store.rs
crates/detectors/: Cargo.toml
crates/detectors/src/: lib.rs  pii.rs  secrets.rs  util.rs
crates/exub-cli/: Cargo.toml
crates/exub-cli/src/: main.rs
crates/guest-agent/: Cargo.toml
crates/guest-agent/examples/: writefile.rs
crates/guest-agent/src/: lib.rs  main.rs
crates/guest-agent/tests/: exec.rs
crates/host/: Cargo.toml
crates/host/src/: error.rs  lib.rs  runtime.rs
crates/host/tests/: determinism.rs  latency.rs  parity.rs  sandbox.rs
crates/host/tests/common/: mod.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: lib.rs
crates/probes/: Cargo.toml  rust-toolchain.toml
crates/probes-common/: Cargo.toml
crates/probes-common/src/: lib.rs
crates/probes-loader/: Cargo.toml
crates/probes-loader/examples/: count_execve.rs  monitor_tap.rs  reference_integration.rs  trace_syscalls.rs
crates/probes-loader/src/: json.rs  lib.rs  observer.rs  record.rs  signing.rs  summary.rs
crates/probes-loader/tests/: audit_record.rs  counter.rs  hardening.rs  net_enforce.rs  net_flows.rs  resource_meter.rs  tap.rs  tracer.rs
crates/probes/.cargo/: config.toml
crates/probes/src/: main.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/sandbox/tests/: run.rs
crates/signals/: Cargo.toml
crates/signals/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/vmm/: Cargo.toml
crates/vmm/src/: console.rs  doctor.rs  drives.rs  exec.rs  firecracker.rs  jail.rs  lib.rs  lifetime.rs  net.rs  paths.rs  pool.rs  snapshot.rs  spawn.rs  sweep.rs  test_util.rs  vm.rs
crates/vmm/tests/: boot.rs  confinement.rs  exec.rs  net.rs  sandbox.rs  snapshot.rs
crates/vmm/tests/common/: mod.rs
crates/vol/: Cargo.toml
crates/vol/src/: lib.rs
detectors/mock/: Cargo.toml  agent.toml
detectors/mock/cases/: clean.txt  clean.verdict.json  hits.txt  hits.verdict.json
detectors/mock/src/: lib.rs
detectors/pii/: Cargo.toml  agent.toml
detectors/pii/cases/: clean.txt  clean.verdict.json  email_ip.txt  email_ip.verdict.json
detectors/pii/src/: lib.rs
detectors/secrets/: Cargo.toml  agent.toml
docs/: 001-boot-a-microvm.md  002-host-guest-comms.md  003-rootfs-and-runtimes.md  004-guest-networking.md  005-snapshots-and-warm-start.md  README.md  SUMMARY.md  benchmarks.md  book.toml  cli-install.md  cli.md  contributing-architecture.md  contributing-building.md  contributing-fuzzing.md  contributing-testing.md  contributing.md  daemon.md  embedding.md  examples-agent-containment.md  examples-ci-job.md  examples-observe-a-run.md  examples-untrusted-binary.md  examples-untrusted-code.md  examples.md  host-hardening.md  introduction.md  non-goals.md  probes.md  quickstart.md  security.md  stability.md  supply-chain.md  threat-model.md
docs/adr/: 001-drive-firecracker-via-its-http-api-over-a-unix-socket.md  002-host-guest-channel-vsock-a-tiny-guest-agent.md  003-the-guest-rootfs-a-pinned-alpine-base-assembled-with.md  004-read-only-base-rootfs-a-per-run-tmpfs-overlay.md  005-bulk-input-via-a-read-only-second-block-device.md  006-bulk-output-via-a-read-after-death-writable-block.md  007-a-byte-for-byte-reproducible-rootfs-build.md  008-guest-networking-is-deny-by-default-a-tap-with-no.md  009-snapshots-are-self-contained-bundles-restored-by.md  009-the-per-vm-tap-shelled-out-to-ip-deleted-on-every.md  010-per-run-resource-policy-one-limits-struct-of.md  010-snapshots-are-self-contained-bundles-restored-by.md  011-cgroup-owned-vm-lifetime-a-sentinel-that-outlives-the.md  011-restore-identity-the-agent-re-addresses-the-clone.md  012-confine-the-vmm-run-firecracker-under-its-jailer.md  012-jailed-execution-is-the-convergence-target-the-sandbox.md  013-per-run-resource-policy-one-limits-struct-of.md  013-the-engine-hoster-security-line-the-engine-s-tools-can.md  014-cgroup-owned-vm-lifetime-a-sentinel-that-outlives-the.md  014-per-vm-network-namespace-the-tap-lives-in-the-vm-s.md  015-jailed-execution-is-the-convergence-target-the-sandbox.md  015-per-exec-inputs-files-env-ride-the-exec-channel-under.md  (+50 more)
docs/examples/: agent-tool-loop.py  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: channel_frame.rs  channel_handshake.rs  channel_request.rs  channel_response.rs
xtask/: Cargo.toml
xtask/src/: artifacts.rs  bench.rs  demo.rs  dist.rs  drift.rs  guest_bins.rs  main.rs  rootfs.rs  selfhost.rs  vendor.rs
(+8 files in other folders)
