[workspace]
resolver = "2"
members = [
    "crates/vmm",
    "crates/channel",
    "crates/guest-agent",
    "crates/probes-common",
    "crates/probes-loader",
    "crates/agent-protocol",
    "crates/agent-client",
    "crates/cli",
    "crates/test-support",
    "xtask",
]
# `crates/probes` holds the eBPF programs. They build for `bpfel-unknown-none` (not the host
# triple) via `bpf-linker`, so excluding them keeps the everyday host gate (clippy --all-targets,
# test) host-only and green; the eBPF object is built separately for its own target. See
# `.rules` and `docs/contributing-building.md`.
#
# `fuzz` is the `cargo fuzz` harness: nightly + libFuzzer, its own detached workspace, never part of
# the everyday stable gate. Excluded here too so `cargo build --workspace` ignores it. See
# `docs/contributing-fuzzing.md`.
exclude = ["crates/probes", "fuzz"]

[workspace.package]
edition = "2021"
# The minimum supported Rust version: the downstream MSRV floor. Kept in step with the exact
# toolchain pinned in `rust-toolchain.toml`, so local, CI, and this floor are one Rust version and a
# lint can't pass locally yet fail CI. The project tracks current stable with deliberate bumps (no
# back-support burden this early), never incidental drift.
rust-version = "1.97"
license = "Apache-2.0"
authors = ["Kendrick Lawton <khe4r6@gmail.com>", "Kendrick Lawton <khlawton@asu.edu>"]
repository = "https://github.com/kendricklawton/agent"

# Dependency-light by design. The host/driver path is `unsafe`-free; the Firecracker API is JSON
# over a unix socket (serde), the CLI parses with clap, logs with tracing.
[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# The CLI's live view (`agent run --watch`), rendered to **stderr** so stdout stays pipe-clean.
# Terminal I/O rides ratatui's re-exported crossterm, so the two can't version-skew.
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The CLI's `.agent.toml` config file layer. Parse-only; keys mirror the `AGENT_*` env names.
toml = "0.8"
# Structured logging to stderr; stdout stays reserved for a run's result / audit log.
tracing = "0.1"
# `json`: the daemon's `--log-json` machine-readable encoding of the same structured events.
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# No-panic discipline on the host path: a hostile or crashing guest, a failed probe, or a broken
# channel is a typed `Err`, never a crash. `unwrap`/`expect` are denied outside tests; `clippy.toml`
# re-allows them in tests. Enforced by the `clippy … -D warnings` step in CI and `cargo xtask ci`.
# Each crate opts in with `[lints] workspace = true`.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
# Guardrail #5 (no panic on the host path) is a stated guarantee, so make the compiler enforce it,
# not just habit: the explicit-panic macros are denied tree-wide. Unlike `unwrap`/`expect`, clippy
# has no "allow in tests" knob for these, so the two integration-test crates that use `panic!` as an
# assertion helper opt out with a file-level `#![allow(clippy::panic)]`.
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
