[package]
name = "agent-abi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "The frozen Detector ABI + canonical Verdict wire type for the agent kernel."

[features]
# The permanent keyless fixture: the shared mock rule + native MockDetector. Off by default so
# real SDK consumers don't link it; the CLI and the mock wasm artifact enable it. Gives the P2
# feature-powerset gate a real {on, off} axis to exercise.
mock = []

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
