[package]
name = "agent-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "The `agent` CLI — drive the Firecracker + aya code-execution sandbox."

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-vmm = { path = "../vmm" }
clap = { workspace = true }
# `agent run --json`: the structured run result is one JSON object on stdout.
serde_json = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
