[package]
name = "agent-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "The `agent` CLI — drive the Firecracker + aya code-execution sandbox."

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
# The audit face (`--trace`/`--record`/`--watch`): the CLI is the caller that composes the two
# tracks — it bridges `Sandbox`'s plain values (pid/netns/tap) into the probes' attach bundle.
agent-probes-loader = { path = "../probes-loader" }
agent-vmm = { path = "../vmm" }
clap = { workspace = true }
# `agent run --watch`: the live TUI, drawn on stderr (stdout stays the run's result).
ratatui = { workspace = true }
# `.agent.toml` config file layer (`flags > env > file > defaults`): serde-derived, unknown keys
# denied so a config typo is a typed error, not a silent no-op.
serde = { workspace = true }
# `agent run --json`: the structured run result is one JSON object on stdout.
serde_json = { workspace = true }
toml = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
