[package]
name = "agent-detectors"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Pure, host-testable detection rules compiled into the detector wasm artifacts."

[dependencies]
# Only the contract — rules build a `Verdict` and nothing else. Kept dependency-light on purpose:
# the excluded `detectors/*` shims link this, and excluded crates escape `cargo deny`, so the whole
# detection path stays hand-rolled and vet-free of third-party trees.
agent-abi = { path = "../abi" }

[lints]
workspace = true
