[package]
name = "exub-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "exub — command-line entry point for the exuberance trading engine."

[[bin]]
name = "exub"
path = "src/main.rs"

[dependencies]
market-data = { path = "../market-data" }
signals = { path = "../signals" }
vol = { path = "../vol" }
# clap gets added when the CLI surface grows; hand-rolled parsing for now keeps
# the whole workspace offline-buildable.
