[package]
name = "agent-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "The agent kernel's wasmtime runtime — sandboxed detector execution (fuel/memory/epoch)."

[dependencies]
# The contract: `Verdict` + the framing/`exports` names the host marshals across the ABI. No
# `mock` feature — the host is detector-agnostic; it runs whatever artifact it's handed.
agent-abi = { path = "../abi" }
# The sandbox. Defaults off — the kernel runs plain core-wasm, so the component model, gc, async,
# threads, profiling, and parallel compilation are all dead weight and extra supply-chain surface.
# `cranelift` compiles a module once; `runtime` executes it; `wat` lets tests hand-write tiny
# ABI-shaped modules (fuel bombs, forbidden-import cases) without a `detectors/` dir.
wasmtime = { version = "46", default-features = false, features = [
    "cranelift",
    "runtime",
    "std",
    "wat",
    "gc-null",
    "anyhow",
] }

[dev-dependencies]
# Tests exercise the real mock artifact and compare it to the native rule (P3.4 golden), so the
# mock rule is needed here.
agent-abi = { path = "../abi", features = ["mock"] }
# Hand-write tiny ABI-shaped modules in-test (fuel bomb, epoch bomb, ABI-mismatch) as WAT →
# wasm bytes, so the sandbox's safety behavior is tested without a throwaway `detectors/` dir.
wat = "1"

[lints]
workspace = true
