[package]
name = "agent-probes-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Userspace loader — attach the eBPF probes to a sandbox, read their maps, stream events."

[dependencies]
# The userspace side of aya: load the object built from `crates/probes` (`cargo xtask build-probes`),
# attach its programs, and read their maps — synchronously, no async runtime (P8.3). Added here now
# that it is used; the load/attach for tc/XDP (P10) and cgroup-bpf (P12) build on this.
aya = "0.13"

# The wire record read out of the ring buffer (`SyscallEvent`), shared with the kernel writer in
# `crates/probes`. `std` on for the ergonomic `comm_lossy` helper on the host side.
agent-probes-common = { path = "../probes-common", features = ["std"] }

[lints]
workspace = true
