[package]
name = "agent-probes-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Userspace loader — attach the eBPF probes to a sandbox, read their maps, stream events."

[dependencies]
# The userspace side of aya: load the object built from `crates/probes` (`cargo xtask build-probes`),
# attach its programs, and read their maps — synchronously, no async runtime (see
# `docs/probes.md`). The tc/XDP and cgroup-bpf load/attach paths build on this.
aya = "0.13"

# The wire record read out of the ring buffer (`SyscallEvent`), shared with the kernel writer in
# `crates/probes`. `std` on for the ergonomic `comm_lossy` helper on the host side.
agent-probes-common = { path = "../probes-common", features = ["std"] }

# Enter a sandbox's network namespace to attach the tap monitor to its `fc0` (decision 024).
# `setns` has no `std` wrapper; nix's is a *safe* function, so the loader stays
# `#![forbid(unsafe_code)]`. `sched` only (setns + CloneFlags), default features off to stay small.
# Pinned to the same 0.31 the workspace already carries (via `vsock` under `agent-vmm`) so the build
# links one copy of nix, not two.
nix = { version = "0.31", default-features = false, features = ["sched"] }

[dev-dependencies]
# The Firecracker driver, for the end-to-end integration tests only (boot a real sandbox, attach
# the probes, prove what the guest did shows up). A dev-dependency so the loader library
# stays independent of `vmm`: the eBPF track and the driver track bridge only by plain values.
agent-vmm = { path = "../vmm" }

[lints]
workspace = true
