[package]
name = "agent-probes-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Userspace loader: attach the eBPF probes to a sandbox, read their maps, stream events."

[dependencies]
# The userspace side of aya: load the object built from `crates/probes` (`cargo xtask build-probes`),
# attach its programs, and read their maps, synchronously, no async runtime (see
# `docs/probes.md`). The tc/XDP and cgroup-bpf load/attach paths build on this.
aya = "0.13"

# The wire record read out of the ring buffer (`SyscallEvent`), shared with the kernel writer in
# `crates/probes`. `std` on for the ergonomic `comm_lossy` helper on the host side.
agent-probes-common = { path = "../probes-common", features = ["std"] }

# Enter a sandbox's network namespace to attach the tap monitor to its `fc0` (ADR 021).
# `setns` has no `std` wrapper; nix's is a *safe* function, so the loader stays
# `#![forbid(unsafe_code)]`. `sched` only (setns + CloneFlags), default features off to stay small.
# Pinned to the same 0.31 the workspace already carries (via `vsock` under `agent-vmm`) so the build
# links one copy of nix, not two.
nix = { version = "0.31", default-features = false, features = ["sched"] }

# Record integrity (decision 034): an `ed25519` detached signature over the canonical record bytes,
# so a consumer detects post-hoc alteration off-host. The signing key is host-side (the guest never
# sees it, like the eBPF). `serde_json` builds/parses the signature envelope only; the record itself
# stays the hand-rolled deterministic JSON (`json.rs`), and is embedded as an opaque string so its
# signed bytes survive a serde round-trip over the wire.
ed25519-dalek = { workspace = true }
serde_json = { workspace = true }
# The session hash-chain (decision 034): each record commits to the SHA-256 of the previous one, so a
# sequence is tamper-evident as a whole. Already in the tree under `ed25519-dalek`; named directly here.
sha2 = { workspace = true }

[dev-dependencies]
# The Firecracker driver, for the end-to-end integration tests only (boot a real sandbox, attach
# the probes, prove what the guest did shows up). A dev-dependency so the loader library
# stays independent of `vmm`: the eBPF track and the driver track bridge only by plain values.
agent-vmm = { path = "../vmm" }
# Cross-crate test helpers (the cgroup-cap harness, host-capability probes), shared with the driver's
# confinement tests so they aren't copy-pasted. Dev-only, never shipped.
agent-test-support = { path = "../test-support" }

[lints]
workspace = true
